feat: 이미지 경로를 수정합니다

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -36,7 +36,7 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
         - name: openvpn-connector
-          image: rafayak/ovpn-connector:latest
+          image: ghcr.io/gompu123/openvpn-cloud-connector:latest
           ports:
             - containerPort: 443
               name: https
